workaround to fix issue on firefox only with perspective and preserve 3d

--- a/style/style.scss
+++ b/style/style.scss
@@ -63,6 +63,11 @@ body {
     box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
     perspective: 1000px;
     backface-visibility: hidden;
+
+    /* remove the persepective on firefox only due to a bug in the browser rendering with perspective and preseve 3d*/
+    @supports (-moz-appearance: none) {
+      perspective: none;
+    }
   }
 }
 
@@ -118,11 +123,13 @@ body {
   overflow: hidden;
 
   backface-visibility: hidden;
+  will-change: transform;
 }
 
 .card.active {
   transform: rotateX(-180deg);
   -moz-transform: rotateX(-180deg);
+  /*   box-shadow: 10px 0px 10px #000; */
 }
 
 .card-face-front {
